# fastapi-clean-arch-starter

./: .env.example  .gitignore  DEPENDENCY_INJECTION.md  Dockerfile  LICENSE  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci.yml
alembic/: env.py
scripts/: create_migration.py
src/: app.py
src/account/application/: service.py  tasks.py
src/account/domain/: models.py  schemas.py
src/account/infra/: dependencies.py  repository.py
src/account/presentation/api/v1/: endpoints.py
src/compliance/: README.md  __init__.py  audit_log.py  data_privacy.py  data_retention.py  endpoints.py  security.py
src/logger/: README.md  __init__.py  config.py  logger.py  middleware.py
src/notification/application/: service.py  tasks.py
src/notification/domain/: models.py  schemas.py
src/notification/infra/: repository.py
src/notification/presentation/api/v1/: endpoints.py
src/shared/application/: crud_service.py  service.py
src/shared/domain/: base.py  repository.py
src/shared/infra/: cache.py  celery_app.py  config.py  container.py  database.py  dependencies.py  middleware.py  repository.py  tenant_context.py  tenant_middleware.py
src/shared/presentation/api/v1/: api.py  tenant_endpoints.py
tests/: conftest.py  test_app.py
