[project]
name = "fastapi-clean-arch-starter"
version = "0.1.0"
description = "Clean Architecture Python FastAPI Starter Project"
authors = [
    {name = "Gus Cavalcante", email = "nowayhecodes@gmail.com"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.1.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "asyncpg>=0.29.0",
    "prometheus-client>=0.19.0",
    "gunicorn>=21.2.0",
    "uvloop>=0.19.0",
    "httptools>=0.6.1",
    "python-json-logger>=2.0.7",
    "structlog>=24.1.0",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.8",
    "mypy>=1.19.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/account", "src/notification", "src/shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 
